--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-cleanempty",
   "description": "Clean empty files and folders.",
-  "version": "0.2.1",
+  "version": "1.0.0",
   "homepage": "https://github.com/stevenvachon/grunt-cleanempty",
   "author": {
     "name": "Steven Vachon",
@@ -21,9 +21,8 @@
       "url": "https://github.com/stevenvachon/grunt-cleanempty/blob/master/LICENSE-MIT"
     }
   ],
-  "main": "Gruntfile.js",
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">= 0.8"
   },
   "scripts": {
     "test": "grunt"
@@ -36,6 +35,9 @@
   "peerDependencies": {
     "grunt": "~0.4"
   },
+  "files": [
+    "tasks"
+  ],
   "keywords": [
     "clean",
     "grunt-contrib-clean",
